// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Box 1`] = `
.emotion-0 {
  box-sizing: border-box;
  border: 0;
  margin: 0;
  padding: 0;
  min-width: 0;
  height: 300px;
  margin-left: auto;
  margin-right: auto;
  background-color: #000;
  color: #fff;
}

<div
  className="emotion-0 emotion-1"
>
  Box
</div>
`;

exports[`Feed basic 1`] = `
.emotion-20 {
  box-sizing: border-box;
  border: 0;
  margin: 0;
  padding: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-3 {
  box-sizing: border-box;
  border: 0;
  margin: 0;
  padding: 0;
  min-width: 0;
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  width: 25%;
}

.emotion-0 {
  box-sizing: border-box;
  border: 0;
  margin: 0;
  padding: 0;
  min-width: 0;
}

<div
  className="emotion-18 emotion-19 emotion-20 emotion-4"
>
  <div
    className="emotion-2 emotion-3 emotion-4"
  >
    <div
      className="emotion-0 emotion-1"
    >
      Item
    </div>
  </div>
  <div
    className="emotion-2 emotion-3 emotion-4"
  >
    <div
      className="emotion-0 emotion-1"
    >
      Item
    </div>
  </div>
  <div
    className="emotion-2 emotion-3 emotion-4"
  >
    <div
      className="emotion-0 emotion-1"
    >
      Item
    </div>
  </div>
  <div
    className="emotion-2 emotion-3 emotion-4"
  />
</div>
`;

exports[`Feed empty 1`] = `
.emotion-2 {
  box-sizing: border-box;
  border: 0;
  margin: 0;
  padding: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

<div
  className="emotion-0 emotion-1 emotion-2 emotion-3"
/>
`;

exports[`Feed with theme 1`] = `
.emotion-3 {
  box-sizing: border-box;
  border: 0;
  margin: 0;
  padding: 0;
  min-width: 0;
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  width: 25%;
}

.emotion-0 {
  box-sizing: border-box;
  border: 0;
  margin: 0;
  padding: 0;
  min-width: 0;
}

.emotion-16 {
  box-sizing: border-box;
  border: 0;
  margin: 0;
  padding: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-left: -8px;
  margin-right: -8px;
  margin-top: -8px;
  margin-bottom: -8px;
}

.emotion-16 + .emotion-14 {
  margin-top: 8px;
}

.emotion-16 > .emotion-2 > .emotion-1,
.emotion-16 > .emotion-1 {
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 8px;
  padding-bottom: 8px;
}

<div
  className="emotion-14 emotion-15 emotion-16 emotion-4"
>
  <div
    className="emotion-2 emotion-3 emotion-4"
  >
    <div
      className="emotion-0 emotion-1"
    >
      Item
    </div>
  </div>
  <div
    className="emotion-2 emotion-3 emotion-4"
  />
  <div
    className="emotion-2 emotion-3 emotion-4"
  />
  <div
    className="emotion-2 emotion-3 emotion-4"
  />
</div>
`;

exports[`Flex 1`] = `
.emotion-7 {
  box-sizing: border-box;
  border: 0;
  margin: 0;
  padding: 0;
  min-width: 0;
  width: 50%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.emotion-0 {
  box-sizing: border-box;
  border: 0;
  margin: 0;
  padding: 0;
  min-width: 0;
}

.emotion-2 {
  box-sizing: border-box;
  border: 0;
  margin: 0;
  padding: 0;
  min-width: 0;
  margin-left: auto;
  margin-right: auto;
}

.emotion-4 {
  box-sizing: border-box;
  border: 0;
  margin: 0;
  padding: 0;
  min-width: 0;
  -webkit-flex: 0 1;
  -ms-flex: 0 1;
  flex: 0 1;
}

<div
  className="emotion-6 emotion-7 emotion-1"
>
  <div
    className="emotion-0 emotion-1"
  >
    Item
  </div>
  <div
    className="emotion-2 emotion-1"
  >
    Item
  </div>
  <div
    className="emotion-4 emotion-1"
  >
    Item
  </div>
</div>
`;

exports[`FlexGrid basic 1`] = `
.emotion-0 {
  box-sizing: border-box;
  border: 0;
  margin: 0;
  padding: 0;
  min-width: 0;
}

.emotion-62 {
  box-sizing: border-box;
  border: 0;
  margin: 0;
  padding: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-3 {
  box-sizing: border-box;
  border: 0;
  margin: 0;
  padding: 0;
  min-width: 0;
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  width: 8.333333333333332%;
}

<div
  className="emotion-60 emotion-61 emotion-62 emotion-1"
>
  <div
    className="emotion-2 emotion-3 emotion-1"
  >
    <div
      className="emotion-0 emotion-1"
    >
      1
    </div>
  </div>
  <div
    className="emotion-2 emotion-3 emotion-1"
  >
    <div
      className="emotion-0 emotion-1"
    >
      1
    </div>
  </div>
  <div
    className="emotion-2 emotion-3 emotion-1"
  >
    <div
      className="emotion-0 emotion-1"
    >
      1
    </div>
  </div>
  <div
    className="emotion-2 emotion-3 emotion-1"
  >
    <div
      className="emotion-0 emotion-1"
    >
      1
    </div>
  </div>
  <div
    className="emotion-2 emotion-3 emotion-1"
  >
    <div
      className="emotion-0 emotion-1"
    >
      1
    </div>
  </div>
  <div
    className="emotion-2 emotion-3 emotion-1"
  >
    <div
      className="emotion-0 emotion-1"
    >
      1
    </div>
  </div>
  <div
    className="emotion-2 emotion-3 emotion-1"
  >
    <div
      className="emotion-0 emotion-1"
    >
      1
    </div>
  </div>
  <div
    className="emotion-2 emotion-3 emotion-1"
  >
    <div
      className="emotion-0 emotion-1"
    >
      1
    </div>
  </div>
  <div
    className="emotion-2 emotion-3 emotion-1"
  >
    <div
      className="emotion-0 emotion-1"
    >
      1
    </div>
  </div>
  <div
    className="emotion-2 emotion-3 emotion-1"
  >
    <div
      className="emotion-0 emotion-1"
    >
      1
    </div>
  </div>
  <div
    className="emotion-2 emotion-3 emotion-1"
  >
    <div
      className="emotion-0 emotion-1"
    >
      1
    </div>
  </div>
  <div
    className="emotion-2 emotion-3 emotion-1"
  >
    <div
      className="emotion-0 emotion-1"
    >
      1
    </div>
  </div>
</div>
`;

exports[`FlexGrid non-integer rem spaces 1`] = `
.emotion-0 {
  box-sizing: border-box;
  border: 0;
  margin: 0;
  padding: 0;
  min-width: 0;
}

.emotion-3 {
  box-sizing: border-box;
  border: 0;
  margin: 0;
  padding: 0;
  min-width: 0;
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  width: 8.333333333333332%;
}

.emotion-62 {
  box-sizing: border-box;
  border: 0;
  margin: 0;
  padding: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-left: -0.25rem;
  margin-right: -0.25rem;
  margin-top: -0.25rem;
  margin-bottom: -0.25rem;
}

.emotion-62 + .emotion-60 {
  margin-top: 0.25rem;
}

.emotion-62 > .emotion-2 {
  padding-left: 0.25rem;
  padding-right: 0.25rem;
  padding-top: 0.25rem;
  padding-bottom: 0.25rem;
}

<div
  className="emotion-60 emotion-61 emotion-62 emotion-1"
>
  <div
    className="emotion-2 emotion-3 emotion-1"
  >
    <div
      className="emotion-0 emotion-1"
    >
      1
    </div>
  </div>
  <div
    className="emotion-2 emotion-3 emotion-1"
  >
    <div
      className="emotion-0 emotion-1"
    >
      1
    </div>
  </div>
  <div
    className="emotion-2 emotion-3 emotion-1"
  >
    <div
      className="emotion-0 emotion-1"
    >
      1
    </div>
  </div>
  <div
    className="emotion-2 emotion-3 emotion-1"
  >
    <div
      className="emotion-0 emotion-1"
    >
      1
    </div>
  </div>
  <div
    className="emotion-2 emotion-3 emotion-1"
  >
    <div
      className="emotion-0 emotion-1"
    >
      1
    </div>
  </div>
  <div
    className="emotion-2 emotion-3 emotion-1"
  >
    <div
      className="emotion-0 emotion-1"
    >
      1
    </div>
  </div>
  <div
    className="emotion-2 emotion-3 emotion-1"
  >
    <div
      className="emotion-0 emotion-1"
    >
      1
    </div>
  </div>
  <div
    className="emotion-2 emotion-3 emotion-1"
  >
    <div
      className="emotion-0 emotion-1"
    >
      1
    </div>
  </div>
  <div
    className="emotion-2 emotion-3 emotion-1"
  >
    <div
      className="emotion-0 emotion-1"
    >
      1
    </div>
  </div>
  <div
    className="emotion-2 emotion-3 emotion-1"
  >
    <div
      className="emotion-0 emotion-1"
    >
      1
    </div>
  </div>
  <div
    className="emotion-2 emotion-3 emotion-1"
  >
    <div
      className="emotion-0 emotion-1"
    >
      1
    </div>
  </div>
  <div
    className="emotion-2 emotion-3 emotion-1"
  >
    <div
      className="emotion-0 emotion-1"
    >
      1
    </div>
  </div>
</div>
`;

exports[`FlexGrid non-integer space 1`] = `
.emotion-0 {
  box-sizing: border-box;
  border: 0;
  margin: 0;
  padding: 0;
  min-width: 0;
}

.emotion-3 {
  box-sizing: border-box;
  border: 0;
  margin: 0;
  padding: 0;
  min-width: 0;
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  width: 8.333333333333332%;
}

.emotion-62 {
  box-sizing: border-box;
  border: 0;
  margin: 0;
  padding: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-left: -1px;
  margin-right: -1px;
  margin-top: -1px;
  margin-bottom: -1px;
}

.emotion-62 + .emotion-60 {
  margin-top: 1px;
}

.emotion-62 > .emotion-2 {
  padding-left: 1px;
  padding-right: 1px;
  padding-top: 1px;
  padding-bottom: 1px;
}

<div
  className="emotion-60 emotion-61 emotion-62 emotion-1"
>
  <div
    className="emotion-2 emotion-3 emotion-1"
  >
    <div
      className="emotion-0 emotion-1"
    >
      1
    </div>
  </div>
  <div
    className="emotion-2 emotion-3 emotion-1"
  >
    <div
      className="emotion-0 emotion-1"
    >
      1
    </div>
  </div>
  <div
    className="emotion-2 emotion-3 emotion-1"
  >
    <div
      className="emotion-0 emotion-1"
    >
      1
    </div>
  </div>
  <div
    className="emotion-2 emotion-3 emotion-1"
  >
    <div
      className="emotion-0 emotion-1"
    >
      1
    </div>
  </div>
  <div
    className="emotion-2 emotion-3 emotion-1"
  >
    <div
      className="emotion-0 emotion-1"
    >
      1
    </div>
  </div>
  <div
    className="emotion-2 emotion-3 emotion-1"
  >
    <div
      className="emotion-0 emotion-1"
    >
      1
    </div>
  </div>
  <div
    className="emotion-2 emotion-3 emotion-1"
  >
    <div
      className="emotion-0 emotion-1"
    >
      1
    </div>
  </div>
  <div
    className="emotion-2 emotion-3 emotion-1"
  >
    <div
      className="emotion-0 emotion-1"
    >
      1
    </div>
  </div>
  <div
    className="emotion-2 emotion-3 emotion-1"
  >
    <div
      className="emotion-0 emotion-1"
    >
      1
    </div>
  </div>
  <div
    className="emotion-2 emotion-3 emotion-1"
  >
    <div
      className="emotion-0 emotion-1"
    >
      1
    </div>
  </div>
  <div
    className="emotion-2 emotion-3 emotion-1"
  >
    <div
      className="emotion-0 emotion-1"
    >
      1
    </div>
  </div>
  <div
    className="emotion-2 emotion-3 emotion-1"
  >
    <div
      className="emotion-0 emotion-1"
    >
      1
    </div>
  </div>
</div>
`;

exports[`FlexGrid rem spaces 1`] = `
.emotion-0 {
  box-sizing: border-box;
  border: 0;
  margin: 0;
  padding: 0;
  min-width: 0;
}

.emotion-3 {
  box-sizing: border-box;
  border: 0;
  margin: 0;
  padding: 0;
  min-width: 0;
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  width: 8.333333333333332%;
}

.emotion-62 {
  box-sizing: border-box;
  border: 0;
  margin: 0;
  padding: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-left: -0.5rem;
  margin-right: -0.5rem;
  margin-top: -0.5rem;
  margin-bottom: -0.5rem;
}

.emotion-62 + .emotion-60 {
  margin-top: 0.5rem;
}

.emotion-62 > .emotion-2 {
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
}

<div
  className="emotion-60 emotion-61 emotion-62 emotion-1"
>
  <div
    className="emotion-2 emotion-3 emotion-1"
  >
    <div
      className="emotion-0 emotion-1"
    >
      1
    </div>
  </div>
  <div
    className="emotion-2 emotion-3 emotion-1"
  >
    <div
      className="emotion-0 emotion-1"
    >
      1
    </div>
  </div>
  <div
    className="emotion-2 emotion-3 emotion-1"
  >
    <div
      className="emotion-0 emotion-1"
    >
      1
    </div>
  </div>
  <div
    className="emotion-2 emotion-3 emotion-1"
  >
    <div
      className="emotion-0 emotion-1"
    >
      1
    </div>
  </div>
  <div
    className="emotion-2 emotion-3 emotion-1"
  >
    <div
      className="emotion-0 emotion-1"
    >
      1
    </div>
  </div>
  <div
    className="emotion-2 emotion-3 emotion-1"
  >
    <div
      className="emotion-0 emotion-1"
    >
      1
    </div>
  </div>
  <div
    className="emotion-2 emotion-3 emotion-1"
  >
    <div
      className="emotion-0 emotion-1"
    >
      1
    </div>
  </div>
  <div
    className="emotion-2 emotion-3 emotion-1"
  >
    <div
      className="emotion-0 emotion-1"
    >
      1
    </div>
  </div>
  <div
    className="emotion-2 emotion-3 emotion-1"
  >
    <div
      className="emotion-0 emotion-1"
    >
      1
    </div>
  </div>
  <div
    className="emotion-2 emotion-3 emotion-1"
  >
    <div
      className="emotion-0 emotion-1"
    >
      1
    </div>
  </div>
  <div
    className="emotion-2 emotion-3 emotion-1"
  >
    <div
      className="emotion-0 emotion-1"
    >
      1
    </div>
  </div>
  <div
    className="emotion-2 emotion-3 emotion-1"
  >
    <div
      className="emotion-0 emotion-1"
    >
      1
    </div>
  </div>
</div>
`;

exports[`FlexGrid vertical and horizontal space 1`] = `
.emotion-0 {
  box-sizing: border-box;
  border: 0;
  margin: 0;
  padding: 0;
  min-width: 0;
}

.emotion-3 {
  box-sizing: border-box;
  border: 0;
  margin: 0;
  padding: 0;
  min-width: 0;
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  width: 8.333333333333332%;
}

.emotion-142 {
  box-sizing: border-box;
  border: 0;
  margin: 0;
  padding: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-left: -8px;
  margin-right: -8px;
  margin-top: -8px;
  margin-bottom: -8px;
}

.emotion-142 + .emotion-140 {
  margin-top: 8px;
}

.emotion-142 > .emotion-2 {
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 8px;
  padding-bottom: 8px;
}

.emotion-63 {
  box-sizing: border-box;
  border: 0;
  margin: 0;
  padding: 0;
  min-width: 0;
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  width: 16.666666666666664%;
}

.emotion-93 {
  box-sizing: border-box;
  border: 0;
  margin: 0;
  padding: 0;
  min-width: 0;
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  width: 25%;
}

.emotion-113 {
  box-sizing: border-box;
  border: 0;
  margin: 0;
  padding: 0;
  min-width: 0;
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  width: 33.33333333333333%;
}

.emotion-128 {
  box-sizing: border-box;
  border: 0;
  margin: 0;
  padding: 0;
  min-width: 0;
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  width: 50%;
}

.emotion-138 {
  box-sizing: border-box;
  border: 0;
  margin: 0;
  padding: 0;
  min-width: 0;
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  width: 100%;
}

<div
  className="emotion-140 emotion-141 emotion-142 emotion-1"
>
  <div
    className="emotion-2 emotion-3 emotion-1"
  >
    <div
      className="emotion-0 emotion-1"
    >
      1
    </div>
  </div>
  <div
    className="emotion-2 emotion-3 emotion-1"
  >
    <div
      className="emotion-0 emotion-1"
    >
      1
    </div>
  </div>
  <div
    className="emotion-2 emotion-3 emotion-1"
  >
    <div
      className="emotion-0 emotion-1"
    >
      1
    </div>
  </div>
  <div
    className="emotion-2 emotion-3 emotion-1"
  >
    <div
      className="emotion-0 emotion-1"
    >
      1
    </div>
  </div>
  <div
    className="emotion-2 emotion-3 emotion-1"
  >
    <div
      className="emotion-0 emotion-1"
    >
      1
    </div>
  </div>
  <div
    className="emotion-2 emotion-3 emotion-1"
  >
    <div
      className="emotion-0 emotion-1"
    >
      1
    </div>
  </div>
  <div
    className="emotion-2 emotion-3 emotion-1"
  >
    <div
      className="emotion-0 emotion-1"
    >
      1
    </div>
  </div>
  <div
    className="emotion-2 emotion-3 emotion-1"
  >
    <div
      className="emotion-0 emotion-1"
    >
      1
    </div>
  </div>
  <div
    className="emotion-2 emotion-3 emotion-1"
  >
    <div
      className="emotion-0 emotion-1"
    >
      1
    </div>
  </div>
  <div
    className="emotion-2 emotion-3 emotion-1"
  >
    <div
      className="emotion-0 emotion-1"
    >
      1
    </div>
  </div>
  <div
    className="emotion-2 emotion-3 emotion-1"
  >
    <div
      className="emotion-0 emotion-1"
    >
      1
    </div>
  </div>
  <div
    className="emotion-2 emotion-3 emotion-1"
  >
    <div
      className="emotion-0 emotion-1"
    >
      1
    </div>
  </div>
  <div
    className="emotion-2 emotion-63 emotion-1"
  >
    <div
      className="emotion-0 emotion-1"
    >
      2
    </div>
  </div>
  <div
    className="emotion-2 emotion-63 emotion-1"
  >
    <div
      className="emotion-0 emotion-1"
    >
      2
    </div>
  </div>
  <div
    className="emotion-2 emotion-63 emotion-1"
  >
    <div
      className="emotion-0 emotion-1"
    >
      2
    </div>
  </div>
  <div
    className="emotion-2 emotion-63 emotion-1"
  >
    <div
      className="emotion-0 emotion-1"
    >
      2
    </div>
  </div>
  <div
    className="emotion-2 emotion-63 emotion-1"
  >
    <div
      className="emotion-0 emotion-1"
    >
      2
    </div>
  </div>
  <div
    className="emotion-2 emotion-63 emotion-1"
  >
    <div
      className="emotion-0 emotion-1"
    >
      2
    </div>
  </div>
  <div
    className="emotion-2 emotion-93 emotion-1"
  >
    <div
      className="emotion-0 emotion-1"
    >
      3
    </div>
  </div>
  <div
    className="emotion-2 emotion-93 emotion-1"
  >
    <div
      className="emotion-0 emotion-1"
    >
      3
    </div>
  </div>
  <div
    className="emotion-2 emotion-93 emotion-1"
  >
    <div
      className="emotion-0 emotion-1"
    >
      3
    </div>
  </div>
  <div
    className="emotion-2 emotion-93 emotion-1"
  >
    <div
      className="emotion-0 emotion-1"
    >
      3
    </div>
  </div>
  <div
    className="emotion-2 emotion-113 emotion-1"
  >
    <div
      className="emotion-0 emotion-1"
    >
      4
    </div>
  </div>
  <div
    className="emotion-2 emotion-113 emotion-1"
  >
    <div
      className="emotion-0 emotion-1"
    >
      4
    </div>
  </div>
  <div
    className="emotion-2 emotion-113 emotion-1"
  >
    <div
      className="emotion-0 emotion-1"
    >
      4
    </div>
  </div>
  <div
    className="emotion-2 emotion-128 emotion-1"
  >
    <div
      className="emotion-0 emotion-1"
    >
      6
    </div>
  </div>
  <div
    className="emotion-2 emotion-128 emotion-1"
  >
    <div
      className="emotion-0 emotion-1"
    >
      6
    </div>
  </div>
  <div
    className="emotion-2 emotion-138 emotion-1"
  >
    <div
      className="emotion-0 emotion-1"
    >
      12
    </div>
  </div>
</div>
`;

exports[`Grid basic 1`] = `
.emotion-64 {
  box-sizing: border-box;
  border: 0;
  margin: 0;
  padding: 0;
  min-width: 0;
  display: grid;
  grid-template-columns: repeat(12,1fr);
}

.emotion-1 {
  box-sizing: border-box;
  border: 0;
  margin: 0;
  padding: 0;
  min-width: 0;
  grid-column: span 1;
  grid-row: 1;
}

.emotion-37 {
  box-sizing: border-box;
  border: 0;
  margin: 0;
  padding: 0;
  min-width: 0;
  grid-column: span 2;
  grid-row: 2;
}

.emotion-55 {
  box-sizing: border-box;
  border: 0;
  margin: 0;
  padding: 0;
  min-width: 0;
  grid-column: span 4;
  grid-row: 3;
}

<div
  className="emotion-63 emotion-64 emotion-2"
>
  <div
    className="emotion-0 emotion-1 emotion-2"
  >
    span 1
  </div>
  <div
    className="emotion-0 emotion-1 emotion-2"
  >
    span 1
  </div>
  <div
    className="emotion-0 emotion-1 emotion-2"
  >
    span 1
  </div>
  <div
    className="emotion-0 emotion-1 emotion-2"
  >
    span 1
  </div>
  <div
    className="emotion-0 emotion-1 emotion-2"
  >
    span 1
  </div>
  <div
    className="emotion-0 emotion-1 emotion-2"
  >
    span 1
  </div>
  <div
    className="emotion-0 emotion-1 emotion-2"
  >
    span 1
  </div>
  <div
    className="emotion-0 emotion-1 emotion-2"
  >
    span 1
  </div>
  <div
    className="emotion-0 emotion-1 emotion-2"
  >
    span 1
  </div>
  <div
    className="emotion-0 emotion-1 emotion-2"
  >
    span 1
  </div>
  <div
    className="emotion-0 emotion-1 emotion-2"
  >
    span 1
  </div>
  <div
    className="emotion-0 emotion-1 emotion-2"
  >
    span 1
  </div>
  <div
    className="emotion-0 emotion-37 emotion-2"
  >
    span 2
  </div>
  <div
    className="emotion-0 emotion-37 emotion-2"
  >
    span 2
  </div>
  <div
    className="emotion-0 emotion-37 emotion-2"
  >
    span 2
  </div>
  <div
    className="emotion-0 emotion-37 emotion-2"
  >
    span 2
  </div>
  <div
    className="emotion-0 emotion-37 emotion-2"
  >
    span 2
  </div>
  <div
    className="emotion-0 emotion-37 emotion-2"
  >
    span 2
  </div>
  <div
    className="emotion-0 emotion-55 emotion-2"
  >
    span 4
  </div>
  <div
    className="emotion-0 emotion-55 emotion-2"
  >
    span 4
  </div>
  <div
    className="emotion-0 emotion-55 emotion-2"
  >
    span 4
  </div>
</div>
`;

exports[`Image empty 1`] = `
.emotion-1 {
  box-sizing: border-box;
  border: 0;
  margin: 0;
  padding: 0;
  min-width: 0;
  display: block;
  max-width: 100%;
  min-width: auto;
  height: auto;
}

<img
  className="emotion-0 emotion-1 emotion-2"
/>
`;

exports[`Image with image 1`] = `
.emotion-1 {
  box-sizing: border-box;
  border: 0;
  margin: 0;
  padding: 0;
  min-width: 0;
  width: 50%;
  display: block;
  max-width: 100%;
  min-width: auto;
  height: auto;
}

<img
  alt=""
  className="emotion-0 emotion-1 emotion-2"
  src="http://placekitten.com/500"
/>
`;

exports[`Layout Holy Grail 1`] = `
.emotion-0 {
  box-sizing: border-box;
  border: 0;
  margin: 0;
  padding: 0;
  min-width: 0;
}

.emotion-7 {
  box-sizing: border-box;
  border: 0;
  margin: 0;
  padding: 0;
  min-width: 0;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  min-height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-2 {
  box-sizing: border-box;
  border: 0;
  margin: 0;
  padding: 0;
  min-width: 0;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
}

<div
  className="emotion-6 emotion-7 emotion-1"
>
  <header
    className="emotion-0 emotion-1"
  >
    Header
  </header>
  <main
    className="emotion-2 emotion-1"
  >
    Main
  </main>
  <footer
    className="emotion-0 emotion-1"
  >
    Footer
  </footer>
</div>
`;

exports[`Layout Media Object 1`] = `
.emotion-2 {
  box-sizing: border-box;
  border: 0;
  margin: 0;
  padding: 0;
  min-width: 0;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
}

.emotion-5 {
  box-sizing: border-box;
  border: 0;
  margin: 0;
  padding: 0;
  min-width: 0;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-0 {
  box-sizing: border-box;
  border: 0;
  margin: 0;
  padding: 0;
  min-width: 0;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

<div
  className="emotion-4 emotion-5 emotion-1"
>
  <div
    className="emotion-0 emotion-1"
  >
    Side
  </div>
  <div
    className="emotion-2 emotion-1"
  >
    Content
  </div>
</div>
`;

exports[`Text empty 1`] = `
.emotion-1 {
  box-sizing: border-box;
  border: 0;
  margin: 0;
  padding: 0;
  min-width: 0;
  font: inherit;
}

<div
  className="emotion-0 emotion-1 emotion-2"
/>
`;

exports[`Text with text 1`] = `
.emotion-1 {
  box-sizing: border-box;
  border: 0;
  margin: 0;
  padding: 0;
  min-width: 0;
  font: inherit;
}

<div
  className="emotion-0 emotion-1 emotion-2"
>
  Hello
</div>
`;

exports[`Text with theme 1`] = `
.emotion-1 {
  box-sizing: border-box;
  border: 0;
  margin: 0;
  padding: 0;
  min-width: 0;
  font: inherit;
  font-family: Helvetica,system-ui,sans-serif;
  font-size: 1rem;
  line-height: 1.2;
}

<div
  className="emotion-0 emotion-1 emotion-2"
>
  Hello
</div>
`;
